# doi2bib

./: .gitignore  .ocamlformat  CHANGES.md  README.md  bibfmt.opam  doi2bib.bc.js  doi2bib.opam  doi2bib.opam.template  dune-project  flake.nix  index.html  result
.github/scripts/: win.sh
.github/workflows/: cross_compile.yml  nix-workflow.yml  remove-old-artifacts.yml  update-flake-lock.yml  workflow.yml
bibfmt/lib/: bibtex.ml  bibtex.mli  dune
bibfmt/tests/: dune  test_error_handling.ml
bibfmt/tests/bibdedup.t/: run.t
bibfmt/tests/bibfmt.t/: run.t
doi2bib/lib/: doi2bib.ml  dune  http.ml
doi2bib/tests/: dune
doi2bib/tests/arxiv.t/: run.t
doi2bib/tests/doi.t/: run.t
doi2bib/tests/pubmed.t/: run.t
js/: doi2bib.ml  dune  index.html
lib/: bibtex.ml  doi2bib.ml  dune  ezgz.ml  http.ml  lib.ml  parser.ml
nix/: bibfmt.nix  default.nix
tests/: dune  test_error_handling.ml
tests/arxiv.t/: run.t
tests/bibfmt.t/: run.t
tests/doi.t/: dune  run.t
tests/pubmed.t/: run.t
