(lang dune 2.7)

(name doi2bib)

(cram enable)

(generate_opam_files true)

(source
 (github mseri/doi2bib))

(license MIT)

(authors "Marcello Seri")

(maintainers "marcello.seri@gmail.com")

(package
 (name doi2bib)
 (synopsis
  "Small CLI to get a bibtex entry from a DOI, an arXiv ID or a PubMed ID"))
